# searchgeo-artifact

./: .env.example  .gitignore  LICENSE  MANIFEST.json  Makefile  README.md  RELEASE_POLICY.md  pyproject.toml
agents/: __init__.py  agent_factory.py  base_agent.py  llm_providers.py  openclaw_agent.py  tool_calling_agent.py
config/: models.yaml  reproducibility.yaml
config/injection_rules/: exp1.yaml  exp2_ablation.yaml
data/attack_modes/: attack_modes.json
data/search_cache/: generated_queries.yaml
defenses/: __init__.py  defense_loader.py
defenses/prompts/v1/: unified_defense.txt
docs/: EXPERIMENT_STATUS.md
eval_pipeline/: __init__.py  asr_judge.py  base_judge.py  oss_judge.py  pipeline.py  ss_judge.py  utils.py
mock_api/: __init__.py  cache_loader.py  injection_rules.py  live_search.py  proxy_client.py  query_matcher.py  result_injector.py  search_proxy.py  server.py
results/: README.md
results/aggregate_metrics/: exp1_main_attack_only_summary.json
results/aggregate_metrics/exp1_main_eval/claude-haiku-4.5/: stats_all_20260520_215642.json
results/aggregate_metrics/exp1_main_eval/claude-sonnet/: stats_all_20260520_095648.json
results/aggregate_metrics/skillinstall_2b_matched/: README.md  openclaw_clean_baseline_manual_labels.json  openclaw_cross_mode_cases.json  summary.json
results/model_outputs_sanitized/: exp2_raw.jsonl  skillinstall_openclaw_cross_mode_raw.jsonl
scripts/: fetch_search_cache.py  generate_queries.py  run_eval.py  run_exp1_v2.py  run_exp2_v2.py
tasks/: finance.yaml  health.yaml  legal.yaml  product.yaml
(+42 files in other folders)
